tooling/nargo_cli/tests/snapshots/execution_success/a_3_add/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(mut x: u32, y: u32, z: u32) {
    x = x + y;
    assert(x == z);
    x = x * 8;
    assert(x > 9);
}
